# rssconcat

./: .gitignore  LICENSE  README.md  config.example.yaml  rssconcat.cabal  stack.yaml
app/: Main.hs
src/: Client.hs  Config.hs  Server.hs
